Fixed Visibility on form

--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -50,14 +50,11 @@ p a[href^="tel:"]:hover {
 
 
 .popup {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: none;
     position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
 }
 
@@ -67,6 +64,7 @@ p a[href^="tel:"]:hover {
     max-width: 400px;
     background-color: #323130;
     color: #ffffff; 
+    
 }
 
 #liveChatSection button {
@@ -306,6 +304,7 @@ section iframe {
 }
 
 #feedbackPopup {
+    display: none;
     padding: 3%;
     text-align: left;
     max-width: 40%;
